--- a/1)Notes/conditionalstatement.ipynb
+++ b/1)Notes/conditionalstatement.ipynb
@@ -19,22 +19,76 @@
     "age = 20\n",
     "\n",
     "if age >=20:\n",
-    "    print(\"your allowed to vote\")"
+    "    print(\"your allowed to vote\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"your minor\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is positive\n",
+      "number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Nested conditional statement\n",
+    "#--> you can put one or more if, elif, or else statement in if, elif or else block\n",
+    "\n",
+    "num = int(input(\"enter the number\"))\n",
+    "\n",
+    "if num >0:\n",
+    "    print(\"number is positive\")\n",
+    "    if num%2==0:\n",
+    "        print(\"number is even\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"number is odd\")\n",
+    "\n",
+    "elif num==0:\n",
+    "    print(\"number is neither positive nor negative\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"number is negative\")\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 year is leap\n"
+     ]
+    }
+   ],
+   "source": [
+    "#practical example \n",
+    "#checking year is leap year or not\n",
+    "\n",
+    "year=int(input(\"Enter a Year\"))\n",
+    "\n",
+    "if year%4==0:\n",
+    "    print(f\"{year} year is leap\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"{year} year is not leap\")"
+   ]
   },
   {
    "cell_type": "code",
