--- a/1)Notes/conditionalstatement.ipynb
+++ b/1)Notes/conditionalstatement.ipynb
@@ -92,10 +92,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error! Divison by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Assignment\n",
+    "#Calculator\n",
+    "\n",
+    "num1=float(input(\"Enter first number\"))\n",
+    "num2=float(input(\"Enter second number\"))\n",
+    "\n",
+    "op = input(\"Enter operation (+,-,*,/)\")\n",
+    "\n",
+    "\n",
+    "if op== '+':\n",
+    "    print(num1 + num2)\n",
+    "elif op =='-':\n",
+    "    print = num1 - num2\n",
+    "elif op =='*':\n",
+    "    print(num1*num2)\n",
+    "\n",
+    "elif op == '/':\n",
+    "    if num2==0:\n",
+    "        print(\"Error! Divison by zero\")\n",
+    "    else:\n",
+    "        print(num1/num2)\n",
+    "\n",
+    "\n",
+    "else:\n",
+    "    print(\"invalide operation\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
