--- a/1)Notes/Loop.ipynb
+++ b/1)Notes/Loop.ipynb
@@ -2,41 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 10)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "#Loops\n",
+    "#1)for loop -->1) Iterating over a range 2)Iterating over string\n",
+    "\n",
+    "#different types of range\n",
+    "\n",
+    "range(5)\n",
+    "range(1,6)\n",
+    "range(1,10,1) #-->syntax range(startindex,stopindex, incrementorstep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1) Iterating over a range\n",
+    "for i in range(1,10,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10,1,-1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v\n",
+      "a\n",
+      "i\n",
+      "b\n",
+      "h\n",
+      "a\n",
+      "v\n",
+      " \n",
+      "g\n",
+      "a\n",
+      "i\n",
+      "k\n",
+      "w\n",
+      "a\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2) Iterating over string\n",
+    "\n",
+    "str = \"vaibhav gaikwad\"\n",
+    "\n",
+    "for i in str:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "##--While Loop--##\n",
+    "#the while loop continues to execute as long as condition is True\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "while count <= 5:\n",
+    "    print(count)\n",
+    "    count = count+1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
