--- a/1)Notes/Loop.ipynb
+++ b/1)Notes/Loop.ipynb
@@ -143,6 +143,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loop control statement\n",
+    "\n",
+    "#1)break\n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i==5:\n",
+    "        break\n",
+    "    print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2)continue\n",
+    "#-->the continue statement skips the current iteration and continues with next\n",
+    "\n",
+    "for i in range(10):\n",
+    "    if i%2==0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "The number is 3\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3)pass\n",
+    "#--> The pass statement is null operation; it does nothing.\n",
+    "\n",
+    "for i in range(5):\n",
+    "    if i == 3:\n",
+    "        print(\"The number is\",i)\n",
+    "        pass\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i:0 and j:0\n",
+      "i:0 and j:1\n",
+      "i:1 and j:0\n",
+      "i:1 and j:1\n",
+      "i:2 and j:0\n",
+      "i:2 and j:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#nested loops --> a loop inside a loop\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(2):\n",
+    "        print(f\"i:{i} and j:{j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of first N natural numbers 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Assignment\n",
+    "#Que-->Calculate the sum of first N natural numbers using a while and for loop\n",
+    "\n",
+    "#using while loop\n",
+    "\n",
+    "n=10\n",
+    "sum=0\n",
+    "count=1\n",
+    "\n",
+    "while count<=n:\n",
+    "    sum=sum+count\n",
+    "    count=count+1\n",
+    "\n",
+    "print(\"sum of first N natural numbers\",sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using for loop\n",
+    "sum = 0\n",
+    "for i in range(11):\n",
+    "    sum=sum+i\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que--> prime numbers between 1 to 100\n",
+    "\n",
+    "for num in range(1,101):\n",
+    "    if num>1:\n",
+    "        for i in range(2,num):\n",
+    "            if num%i==0:\n",
+    "                break\n",
+    "\n",
+    "        else:\n",
+    "            print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
