--- a/2)Assignments/assignment2(controlflow)solution.ipynb
+++ b/2)Assignments/assignment2(controlflow)solution.ipynb
@@ -428,8 +428,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bb993f8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Que 15)\n",
+    "\n",
+    "n = int(input(\"Enter a number\"))\n",
+    "\n",
+    "a,b=0,1\n",
+    "count=0\n",
+    "while count<n:\n",
+    "    print(a)\n",
+    "    a,b=b,a+b\n",
+    "    count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "decd0113",
    "metadata": {},
    "outputs": [],
    "source": []
