--- a/1)Notes/3-Data structures/Lists.ipynb
+++ b/1)Notes/3-Data structures/Lists.ipynb
@@ -110,6 +110,413 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'w', 'a', 't', 'e', 'r', 'm', 'e', 'l', 'o', 'n', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LIsts methods\n",
+    "# 1) Append --> To add an item to the end\n",
+    "\n",
+    "fruits.append(\"orange\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'w', 'green apple', 'a', 't', 'e', 'r', 'm', 'e', 'l', 'o', 'n', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2) Insert --> to add an element at specific index\n",
+    "\n",
+    "fruits.insert(2,\"green apple\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['w', 'green apple', 'e', 'r', 'm', 'e', 'l', 'o', 'n', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3) Remove --> To remove an element\n",
+    "\n",
+    "fruits.remove(\"t\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "['w', 'green apple', 'e', 'r', 'm', 'e', 'l', 'o']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4) Remove and return the last item\n",
+    "\n",
+    "popped=fruits.pop()\n",
+    "print(popped)\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5) index --> returns index of element\n",
+    "\n",
+    "fruits.index(\"green apple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'e', 'green apple', 'l', 'm', 'o', 'r', 'w']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6) Sort --> sorts the elements in asending order\n",
+    "fruits.sort()\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7) reverse\n",
+    "fruits.reverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['w', 'r', 'o', 'm', 'l', 'green apple', 'e', 'e']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#8) clear\n",
+    "fruits.clear()\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[6, 7, 8, 9, 10]\n",
+      "[1, 3, 5, 7, 9]\n",
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing the lists\n",
+    "numbers = [1,2,3,4,5,6,7,8,9,10]\n",
+    "print(numbers[2:5])\n",
+    "print(numbers[:5])\n",
+    "print(numbers[5:])\n",
+    "print(numbers[::2])    # :: --> means step up --> ::2 means jump of 2 indexes\n",
+    "print(numbers[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## iterating over a list\n",
+    "\n",
+    "for number in numbers:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n",
+      "6 7\n",
+      "7 8\n",
+      "8 9\n",
+      "9 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterating with index --> using inbuilt function enumerate\n",
+    "\n",
+    "for index,number in enumerate(numbers):\n",
+    "    print(index,number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehension\n",
+    "\n",
+    "lst=[]\n",
+    "for x in range(10):\n",
+    "    lst.append(x**2)\n",
+    "print(lst)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x**2 for x in range(10)] # --> list comprenhension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#syntax for list comprenhension\n",
+    "# basic syntax --> [expression for item in iterable]\n",
+    "# with conditional logic --> [expression for item in iterable if condition]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "                   # -->>Types of list comprenhension <<--\n",
+    "\n",
+    "#1) Basic list comprehension\n",
+    "\n",
+    "square = [num**2 for num in range(10)]\n",
+    "print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2) List Comprenhension with condition\n",
+    "\n",
+    "evennum= [num for num in range(10) if num%2==0]\n",
+    "evennum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'a'], [1, 'b'], [1, 'c'], [1, 'd'], [2, 'a'], [2, 'b'], [2, 'c'], [2, 'd'], [3, 'a'], [3, 'b'], [3, 'c'], [3, 'd'], [4, 'a'], [4, 'b'], [4, 'c'], [4, 'd']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3) Nested List comprehension \n",
+    "#syntax--> [expression for item1 in iterable1 for item2 in iterable 2]\n",
+    "\n",
+    "lst1 = [1,2,3,4]\n",
+    "lst2 = ['a','b','c','d']\n",
+    "\n",
+    "pair = [[i,j] for i in lst1 for j in lst2]\n",
+    "\n",
+    "print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehension with function calls\n",
+    "\n",
+    "words = [\"hello\",\"world\",\"python\"]\n",
+    "lengths = [len(word) for word in words]\n",
+    "\n",
+    "print(lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
