--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -150,6 +150,7 @@
     }
    ],
    "source": [
+    "# Que 4)\n",
     "square=[num**2 for num in range(1,11)]\n",
     "square"
    ]
@@ -172,17 +173,86 @@
     }
    ],
    "source": [
+    "#Que 5)\n",
     "evenlst=[x for x in lst if x%2==0]\n",
     "evenlst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "eaee8026",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list : [13, 8, 3, 3, 15, 20, 8, 14, 2, 4, 5, 16, 4, 19, 13]\n",
+      "Sorted list in ascending order : [2, 3, 3, 4, 4, 5, 8, 8, 13, 13, 14, 15, 16, 19, 20]\n",
+      "sorted list in descending order : [20, 19, 16, 15, 14, 13, 13, 8, 8, 5, 4, 4, 3, 3, 2]\n",
+      "List containing unique numbers : [2, 3, 4, 5, 8, 13, 14, 15, 16, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Que 6)\n",
+    "import random\n",
+    "randomlist=[random.randint(1,20) for _ in range(15)]\n",
+    "print(f\"Original list : {randomlist}\")\n",
+    "\n",
+    "sorted_asc=sorted(randomlist)\n",
+    "print(f\"Sorted list in ascending order : {sorted_asc}\")\n",
+    "\n",
+    "sorted_dec=sorted(randomlist,reverse=True)\n",
+    "print(f\"sorted list in descending order : {sorted_dec}\")\n",
+    "\n",
+    "unique_numbers=list(set(randomlist))\n",
+    "print(f\"List containing unique numbers : {unique_numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2bf8f4ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrix : [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Element at second row and third coloumn 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 7)\n",
+    "matrix = [\n",
+    "    [1,2,3],\n",
+    "    [4,5,6],\n",
+    "    [7,8,9]\n",
+    "]\n",
+    "\n",
+    "print(f\"matrix : {matrix}\")\n",
+    "\n",
+    "for row in matrix:\n",
+    "    print(row)\n",
+    "print(f\"Element at second row and third coloumn {matrix[1][2]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "981c00c6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 8)\n"
+   ]
   }
  ],
  "metadata": {
