--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -246,12 +246,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "981c00c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted students by score in descending order:\n",
+      "{'name': 'Charlie', 'score': 95}\n",
+      "{'name': 'Alice', 'score': 88}\n",
+      "{'name': 'Eve', 'score': 78}\n",
+      "{'name': 'Bob', 'score': 72}\n",
+      "{'name': 'David', 'score': 65}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 8)\n",
+    "students = [\n",
+    "    {'name': 'Alice', 'score': 88},\n",
+    "    {'name': 'Bob', 'score': 72},\n",
+    "    {'name': 'Charlie', 'score': 95},\n",
+    "    {'name': 'David', 'score': 65},\n",
+    "    {'name': 'Eve', 'score': 78}\n",
+    "]\n",
+    "sorted_students = sorted(students, key=lambda x: x['score'], reverse=True)\n",
+    "print(\"Sorted students by score in descending order:\")\n",
+    "for student in sorted_students:\n",
+    "    print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7b8ecc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Que 8)\n"
+    "# Que 9)\n"
    ]
   }
  ],
