--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -280,13 +280,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f7b8ecc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix:\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Transposed matrix:\n",
+      "[1, 4, 7]\n",
+      "[2, 5, 8]\n",
+      "[3, 6, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 9)\n"
+    "# Que 9)\n",
+    "def transpose_matrix(matrix):\n",
+    "    transposed = [[matrix[j][i] for j in range(len(matrix))] for i in range(len(matrix[0]))]\n",
+    "    return transposed\n",
+    "\n",
+    "matrix = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "transposed = transpose_matrix(matrix)\n",
+    "print(\"Original matrix:\")\n",
+    "for row in matrix:\n",
+    "    print(row)\n",
+    "print(\"Transposed matrix:\")\n",
+    "for row in transposed:\n",
+    "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d011b86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
