--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -325,7 +325,9 @@
    "id": "2d011b86",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 10)\n"
+   ]
   }
  ],
  "metadata": {
