--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -321,13 +321,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d011b86",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Que 10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fdb4da99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Que 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "41923591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Que 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bcfc2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
