--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -351,11 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8bcfc2b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 13)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e2681d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
