--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -361,13 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "10e2681d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "#Que 14)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f57290",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
