--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -371,8 +371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "31f57290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Que 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6238f145",
    "metadata": {},
    "outputs": [],
    "source": []
