--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -331,17 +331,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "fdb4da99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[1, 3, 5, 7, 8, 9, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 8, 99, 9, 10]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Que 11)"
+    "# Que 11)\n",
+    "\n",
+    "lst = list(range(1,11))\n",
+    "print(lst)\n",
+    "\n",
+    "lst.remove(2)\n",
+    "lst.remove(4)\n",
+    "lst.remove(6)\n",
+    "print(lst)\n",
+    "\n",
+    "lst.insert(5,99)\n",
+    "lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "41923591",
    "metadata": {},
    "outputs": [],
@@ -351,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "8bcfc2b1",
    "metadata": {},
    "outputs": [],
@@ -361,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "10e2681d",
    "metadata": {},
    "outputs": [],
