--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -421,13 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f9d0eddf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "# Que 17"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97b98e60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
