--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -401,11 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "31f57290",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 15)"
+   ]
   },
   {
    "cell_type": "code",
