--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "31f57290",
    "metadata": {},
    "outputs": [],
@@ -411,8 +411,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "28d72436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Que 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a464159a",
    "metadata": {},
    "outputs": [],
    "source": []
