--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -321,12 +321,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2d011b86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original List [[1, 2, 3], [4, 5, 6], [8, 9, 10]]\n",
+      "flattened List [1, 2, 3, 4, 5, 6, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 10)\n"
+    "# Que 10)\n",
+    "def flatten_list(nested_list):\n",
+    "    flat_list=[item for sublist in nested_list for item in sublist]\n",
+    "\n",
+    "    return flat_list\n",
+    "nested_list=[\n",
+    "    [1,2,3],\n",
+    "    [4,5,6],\n",
+    "    [8,9,10]\n",
+    "]\n",
+    "\n",
+    "flattened = flatten_list(nested_list)\n",
+    "print(f\"Original List {nested_list}\")\n",
+    "print(f\"flattened List {flattened}\")\n"
    ]
   },
   {
