--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -393,22 +393,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "41923591",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 9), (2, 8), (3, 7), (4, 6), (5, 10)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 12)"
+    "# Que 12)\n",
+    "lst1 = [1,2,3,4,5]\n",
+    "lst2 = [9,8,7,6,10]\n",
+    "\n",
+    "zipped = list(zip(lst1,lst2))\n",
+    "print(zipped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "8bcfc2b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "Reversed list [9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 13)\n"
+    "# Que 13)\n",
+    "def reverse_list(lst):\n",
+    "    return lst[::-1]\n",
+    "\n",
+    "original_lst = [1,2,3,4,5,6,7,8,9]\n",
+    "reversed_lst = reverse_list(original_lst)\n",
+    "print(f\"Original list {original_lst}\")\n",
+    "print(f\"Reversed list {reversed_lst}\")\n",
+    "\n"
    ]
   },
   {
