--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -443,23 +443,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "10e2681d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5]\n",
+      "Rotated list: [3, 4, 5, 1, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Que 14)\n"
+    "#Que 14)\n",
+    "def rotate_list(lst, n):\n",
+    "    return lst[n:] + lst[:n]\n",
+    "\n",
+    "original_list = [1, 2, 3, 4, 5]\n",
+    "rotated_list = rotate_list(original_list, 2)\n",
+    "print(f\"Original list: {original_list}\")\n",
+    "print(f\"Rotated list: {rotated_list}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "31f57290",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5]\n",
+      "Rotated list: [3, 4, 5, 1, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 15)"
+    "# Que 15)\n",
+    "def rotate_list(lst, n):\n",
+    "    return lst[n:] + lst[:n]\n",
+    "\n",
+    "original_list = [1, 2, 3, 4, 5]\n",
+    "rotated_list = rotate_list(original_list, 2)\n",
+    "print(f\"Original list: {original_list}\")\n",
+    "print(f\"Rotated list: {rotated_list}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "297e9c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
