--- a/2)Assignments/Assignment3(List)solution.ipynb
+++ b/2)Assignments/Assignment3(List)solution.ipynb
@@ -495,11 +495,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "297e9c9b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 16"
+   ]
   }
  ],
  "metadata": {
