--- a/1)Notes/3-Data structures/Tuples.ipynb
+++ b/1)Notes/3-Data structures/Tuples.ipynb
@@ -122,21 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7, 8, 9, 6, 'hello world', 1, 2, 3, 4, 45, 5)\n",
-      "(7, 8, 9, 6, 'hello world', 7, 8, 9, 6, 'hello world', 7, 8, 9, 6, 'hello world')\n"
+      "(7, 8, 9, 6, 9, 'hello world', 1, 2, 3, 4, 45, 5)\n",
+      "(7, 8, 9, 6, 9, 'hello world', 7, 8, 9, 6, 9, 'hello world', 7, 8, 9, 6, 9, 'hello world')\n"
      ]
     }
    ],
    "source": [
     "# Tuples operations\n",
-    "tup1 = (7,8,9,6,\"hello world\")\n",
+    "tup1 = (7,8,9,6,9,\"hello world\")\n",
     "\n",
     "# 1) Concatenation\n",
     "print(tup1 + num)\n",
@@ -147,12 +147,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Immutable nature of tuple --> means elements can not be changed once it assigned\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tuple Methods\n",
+    "# 1) Count --> it measures how many times this number is repeated in tuple\n",
+    "print(tup1.count(9))\n",
+    "\n",
+    "# 2) Index --> it returns the index of that element that passed in paranthesis\n",
+    "print(tup1.index(8))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# packing and unpacking tuple\n"
    ]
   }
  ],
