--- a/1)Notes/3-Data structures/Tuples.ipynb
+++ b/1)Notes/3-Data structures/Tuples.ipynb
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# packing and unpacking tuple\n"
+    "# packing and unpacking tuple\n",
+    " "
    ]
   }
  ],
