--- a/1)Notes/3-Data structures/Tuples.ipynb
+++ b/1)Notes/3-Data structures/Tuples.ipynb
@@ -180,13 +180,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 'hello world')\n",
+      "1\n",
+      "2\n",
+      "hello world\n",
+      "1\n",
+      "[2, 3, 4, 5]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# packing and unpacking tuple\n",
+    "packed_tuple=1,2,\"hello world\" #--> packing of tuple\n",
+    "print(packed_tuple)\n",
+    "\n",
+    "# Unpacking of tuple\n",
+    "a,b,c=packed_tuple\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "\n",
+    "# Unpacking with *  ---> use when number of elements is to large to unpack \n",
+    "num = (1,2,3,4,5,6)\n",
+    "first,*middle,last=num\n",
+    "print(first)\n",
+    "print(middle)\n",
+    "print(last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello', 'world')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nested tuples --> tuple inside tuple\n",
+    "tup = ((1,2,3),(4,5,6),(\"hello\",\"world\"))\n",
+    "tup[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "hello world \n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterating over a nested tuples\n",
+    "for sub_tup in tup:\n",
+    "    for item in sub_tup:\n",
+    "        print(item,end=\" \")\n",
+    "        \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x00000245FE75D240>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (i for i in range(1,10))\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# packing and unpacking tuple\n",
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
