--- a/1)Notes/3-Data structures/Tuples.ipynb
+++ b/1)Notes/3-Data structures/Tuples.ipynb
@@ -264,20 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x00000245FE75D240>\n"
+      "<generator object <genexpr> at 0x00000245FE7886C0>\n",
+      "(0, 1, 4, 9, 16, 25, 36, 49, 64, 81)\n"
      ]
     }
    ],
    "source": [
-    "tup = (i for i in range(1,10))\n",
-    "print(tup)"
+    "tup = (i**2 for i in range(10))\n",
+    "print(tup)\n",
+    "print(tuple(tup))"
    ]
   },
   {
