--- a/1)Notes/3-Data structures/Tuples.ipynb
+++ b/1)Notes/3-Data structures/Tuples.ipynb
@@ -277,6 +277,7 @@
     }
    ],
    "source": [
+    "# tuple comprehension\n",
     "tup = (i**2 for i in range(10))\n",
     "print(tup)\n",
     "print(tuple(tup))"
