--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -70,7 +70,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 1)\n",
+    "\n",
+    "tup = tuple(range(1,11))\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab2c252c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first element 1\n",
+      "middle element 6\n",
+      "last element 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 2)\n",
+    "print(f\"first element {tup[0]}\")\n",
+    "print(f\"middle element {tup[len(tup)//2]}\")\n",
+    "print(f\"last element {tup[-1]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6432422",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first three element (1, 2, 3)\n",
+      "last three elements (8, 9, 10)\n",
+      "elements from index 2 to 5 (3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 3)\n",
+    "print(f\"first three element {tup[:3]}\")\n",
+    "print(f\"last three elements {tup[-3:]}\")\n",
+    "print(f\"elements from index 2 to 5 {tup[2:6]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "19345871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "\n",
+      "Element in second row and third coloumn is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = (\n",
+    "    (1,2,3),\n",
+    "    (4,5,6),\n",
+    "    (7,8,9)\n",
+    ")\n",
+    "\n",
+    "for row in matrix:\n",
+    "    #for item in row:\n",
+    "        #print(item)\n",
+    "    print(row)\n",
+    "\n",
+    "print(f\"Element in second row and third coloumn is {matrix[1][2]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "2ffd86ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -92,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
