--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -169,11 +169,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2ffd86ab",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Que 5)\n",
+    "tup1 = (1,2,3)\n",
+    "tup2 = (4,5,6)\n",
+    " \n",
+    "tup = tup1 + tup2\n",
+    "tup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcda1aa3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 6)"
+   ]
   }
  ],
  "metadata": {
