--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -195,13 +195,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "dcda1aa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occurance of 4 : 4\n",
+      "index of first occurance of 2 : 8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 6)"
+    "# Que 6)\n",
+    "tup = (1,2,3,4,4,4,4,5,6,6)\n",
+    "print(f\"Occurance of 4 : {tup.count(4)}\")\n",
+    "print(f\"index of first occurance of 6 : {tup.index(6)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5bfbca62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 7)\n",
+    "tup = (1,2,3,4,5)\n",
+    "a,b,c,d,e,=tup\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6105b49c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Que 8)\n",
+    "lst = list(range(1,6))\n",
+    "lst\n",
+    "tup = tuple(lst)\n",
+    "tup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "33f208c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2, 3), (4, 5, 6), (7, 8, 9))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 9)\n",
+    "tup = (\n",
+    "    (1,2,3),\n",
+    "    (4,5,6),\n",
+    "    (7,8,9)\n",
+    "    )\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "254f30db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 10)\n",
+    "tup = tuple(range(1,6))\n",
+    "print(tup)\n",
+    "\n",
+    "lst = list(tup)\n",
+    "lst.append(6)\n",
+    "lst\n",
+    "\n",
+    "tup = tuple(lst)\n",
+    "print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6856fcfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
