--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -323,11 +323,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "6856fcfc",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 11)\n",
+    "string = \"hello\"\n",
+    "tpl = tuple(string)\n",
+    "joined_string = ''.join(tpl)\n",
+    "print(joined_string)\n",
+    "print(type(joined_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81356993",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 12)\n"
+   ]
   }
  ],
  "metadata": {
