--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -347,13 +347,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "81356993",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(1, 2): 3, (4, 5): 6}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 12)\n"
+    "# Que 12)\n",
+    "tup_dict = {\n",
+    "    (1,2):3,\n",
+    "    (4,5):6,\n",
+    "}\n",
+    "print(tup_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6472eeb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
