--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -374,7 +374,9 @@
    "id": "6472eeb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 13)"
+   ]
   }
  ],
  "metadata": {
